# 01-rcli

./: .pre-commit-config.yaml  Cargo.toml  test.rest  tmp
src/: main.rs  opts.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs
