[package]
name = "rcli"
version = "0.1.0"
authors = ["Jane<guojjingy@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
nextest = "0.0.0"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
